# pixel_test

./: .env.example  Makefile  README.md  alembic.ini  pyproject.toml
src/: main.py
src/celery_impl/: celeryconfig.py
src/celery_impl/contracts/: tasks.py
src/core/: settings.py
src/database/: __init__.py  session.py  tables.py
src/database/migrations/: env.py
src/database/migrations/versions/: 85f8c538a028_.py  b1757e0da370_.py
src/database/repositories/: __init__.py  base.py  contracts_repository.py  status_repository.py
src/errors/: __init__.py  base.py
src/models/: __init__.py  base.py  contracts.py  status.py
src/services/: __init__.py  contracts_service.py  version_service.py
src/utils/: __init__.py  hash.py
